--- a/Config/Config.properties
+++ b/Config/Config.properties
@@ -1,9 +1,10 @@
 ControllerSheetName=Controller
 bFrameworkDebugMode=true
+bJenkinsTest=false
 ReportPath=C:\\Users\\praveenikkr\\Documents\\Selenium_Test_Reports
 #ReportPath=G:\\.shortcut-targets-by-id\\1QKUv-1jaGNu0SZi9LHl84la6RAqjk1Ds\\TEAM-HEALTHGRAPH\\QUALITY-ASSURANCE\\Demo_Test_Reports
 
-environment=environmentValue
+environment=QA3
 
 URL_PROD=https://ehr.healthgraph.in/users/login
 URL_PP=https://ppehr.healthgraph.in/users/login
@@ -32,3 +33,5 @@ testRunType=Smoke
 EnumerateDataExcelFiles=Patients,Medication_Sets
 patientKeyUsed=002
 medicationSetKeyUsed=002
+testType = SMOKE
+testModule = testModuleValue
