--- a/src/main/resources/JenkinsParams.properties
+++ b/src/main/resources/JenkinsParams.properties
@@ -1,7 +1,7 @@
 
 environment=${environment}
 testType=${testType}
-testModule=${testModule
+testModule=${testModule}
 ReportPath=./target/ExtentReport.html
 
 
